Fix - Border wrap design

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -2289,13 +2289,6 @@ body.everest-forms-builder-setup,
 					.everest-forms-border-container-title {
 						background: $color-white;
 					}
-
-					.everest-forms-panel-field {
-
-						&:last-child {
-							margin-bottom: 0;
-						}
-					}
 				}
 
 				.evf-content-email-settings {
